Create view to display inital user

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Startview</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    {% comment %} HTMX CDN {% endcomment %}
+    <script src="https://unpkg.com/htmx.org@1.9.2"></script>
 </head>
 <body>
     <header>
