--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,13 @@
-{% load static%}
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Startview</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    {% comment %} Bootstrap CDN {% endcomment %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous">
+    {% block extra_css%}
+    {% endblock %}
     {% comment %} HTMX CDN {% endcomment %}
     <script src="https://unpkg.com/htmx.org@1.9.2"></script>
 </head>
@@ -22,5 +22,7 @@
     </main>
 
     <footer></footer>
+    {% comment %} Bootstrap JS CDN {% endcomment %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js" integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu" crossorigin="anonymous"></script>
 </body>
 </html>
