--- a/familytree/templates/familytree/add-family-member.html
+++ b/familytree/templates/familytree/add-family-member.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
+<h3 class="card-title mb-4 text-center">Add {{ relation|title }}</h3>
 <div class="container mt-5">
   <div class="row justify-content-center">
     <div class="col-md-6 col-lg-5">
