--- a/familytree/templates/familytree/family-list.html
+++ b/familytree/templates/familytree/family-list.html
@@ -17,13 +17,11 @@
   </div>
   <div id="middle-section">
     <div id="siblings-container">
-      {% if owner.siblings.all|length == 1 %}
+      {% if owner.siblings|length > 0 %}
         <button>Display Sibling</button>
-        <button>Add Sibling</button>
-      {% elif owner.siblings.all %}
-        <button>Display Siblings</button>
+        <a href="{% url 'add_family_member' %}?relation=sibling&owner_id={{ owner.id }}" class="btn btn-outline-success">Add Sibling</a>
       {% else %}
-        <button>Add Sibling</button>
+        <a href="{% url 'add_family_member' %}?relation=sibling&owner_id={{ owner.id }}" class="btn btn-outline-success">Add Sibling</a>
       {% endif %}
     </div>
     <div id="owner-info-container">
