--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,8 @@
+{% load static %}
+{% url 'account_login' as login_url %}
+{% url 'account_signup' as signup_url %}
+{% url 'account_logout' as logout_url %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,13 +12,25 @@
     {% comment %}Bootstrap CDN{% endcomment %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous" />
     {% block extra_css %}
+
     {% endblock %}
     {% comment %}HTMX CDN{% endcomment %}
     <script src="https://unpkg.com/htmx.org@1.9.2"></script>
   </head>
   <body>
     <header>
-      <nav></nav>
+      {% if user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page" href="{% url 'account_logout' %}">Logout</a>
+        </li>
+      {% else %}
+        <li class="nav-item">
+          <a class="nav-link {% if request.path == signup_url %}active{% endif %}" aria-current="page" href="{% url 'account_signup' %}">Register</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link {% if request.path == login_url %}active{% endif %}" aria-current="page" href="{% url 'account_login' %}">Login</a>
+        </li>
+      {% endif %}
     </header>
 
     <main>
