--- a/familytree/templates/familytree/view-partner.html
+++ b/familytree/templates/familytree/view-partner.html
@@ -25,7 +25,12 @@
       {% endif %}
     </div>
     <div id="owner-info-container">
-      <img src="{% static 'images/default-image.png' %}" alt="you" class="profile-image" />
+      {% if "placeholder" in person.featured_image.url %}
+        <img class="card-img-top" src="{% static 'images/default-image.png' %}"
+           alt="placeholder image">
+        {% else %}
+        <img class="card-img-top" src=" {{ person.featured_image.url }}" alt="{{ post.title }}">
+        {% endif %}
       <div id="owner-info">
         <p>
           Name: <span id="first-name">{{ owner.first_name }}</span> <span id="last-name">{{ owner.last_name }}</span>
