Insert "Edit Person" Button for better Control over data

--- a/familytree/templates/familytree/family-list.html
+++ b/familytree/templates/familytree/family-list.html
@@ -39,6 +39,7 @@
           <p>
             Birthday: <span id="birthday">{{ owner.birthday }}</span>
           </p>
+          <a href="{% url 'edit_person' person.id %}" class="btn btn-outline-primary">Edit Person</a>
         </div>
       </div>
       <div id="spouse-container">
