--- a/familytree/templates/familytree/view-parents.html
+++ b/familytree/templates/familytree/view-parents.html
@@ -22,6 +22,7 @@
             <p>
               Birthday: <span id="birthday">{{ parent.birthday }}</span>
             </p>
+            <a href="{% url 'edit_person' person.id %}" class="btn btn-outline-primary">Edit Person</a>
           </div>
         </div>
       {% endfor %}
@@ -50,6 +51,7 @@
         <p>
           Birthday: <span id="birthday">{{ owner.birthday }}</span>
         </p>
+        <a href="{% url 'edit_person' person.id %}" class="btn btn-outline-primary">Edit Person</a>
       </div>
     </div>
     <div id="spouse-container">
