--- a/familytree/templates/familytree/view-partner.html
+++ b/familytree/templates/familytree/view-partner.html
@@ -38,6 +38,7 @@
         <p>
           Birthday: <span id="birthday">{{ owner.birthday }}</span>
         </p>
+        <a href="{% url 'edit_person' person.id %}" class="btn btn-outline-primary">Edit Person</a>
       </div>
     </div>
     <div id="spouse-container">
@@ -50,6 +51,7 @@
           <p>
             Birthday: <span>{{ partner.birth_date }}</span>
           </p>
+          <a href="{% url 'edit_person' person.id %}" class="btn btn-outline-primary">Edit Person</a>
         </div>
       {% else %}
         <p>No partner added yet.</p>
