--- a/familytree/templates/familytree/view-parents.html
+++ b/familytree/templates/familytree/view-parents.html
@@ -22,7 +22,7 @@
             <p>
               Birthday: <span id="birthday">{{ parent.birthday }}</span>
             </p>
-            <a href="{% url 'edit_person' person.id %}" class="btn btn-outline-primary">Edit Person</a>
+            <a href="{% url 'edit_person' parent.id %}" class="btn btn-outline-primary">Edit Person</a>
           </div>
         </div>
       {% endfor %}
