--- a/familytree/templates/familytree/view-children.html
+++ b/familytree/templates/familytree/view-children.html
@@ -1,70 +1,73 @@
 {% extends 'base.html' %}
 {% load static %}
-{% comment %} Own CSS {% endcomment %}
+{% comment %}Own CSS{% endcomment %}
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}" />
 {% endblock %}
 {% block content %}
   <div id="parents-container">
-    {% if owner.parents.all|length == 1 %}
-      <a href="{% url 'family_view' owner.id %}?view=parents" class="btn btn-outline-success">Parents</a>
+    {% if person.parents.all|length == 1 %}
+      <a href="{% url 'family_view' person.id %}?view=parents" class="btn btn-outline-success">Parents</a>
       <a href="{% url 'add_family_member' %}?relation=parent&owner_id={{ owner.id }}" class="btn btn-outline-success">Add Parent</a>
-    {% elif owner.parents.all %}
-      <a href="{% url 'family_view' owner.id %}?view=parents" class="btn btn-outline-success">Parents</a>
+    {% elif person.parents.all %}
+      <a href="{% url 'family_view' person.id %}?view=parents" class="btn btn-outline-success">Parents</a>
     {% else %}
-    <a href="{% url 'add_family_member' %}?relation=parent&owner_id={{ owner.id }}" class="btn btn-outline-success">Add Parent</a>
+      <a href="{% url 'add_family_member' %}?relation=parent&owner_id={{ owner.id }}" class="btn btn-outline-success">Add Parent</a>
     {% endif %}
   </div>
   <div id="middle-section">
     <div id="siblings-container">
-      {% if owner.siblings|length > 0 %}
-        <a href="{% url 'family_view' owner.id %}?view=siblings" class="btn btn-outline-success">Siblings</a>
+      {% if person.siblings|length > 0 %}
+        <a href="{% url 'family_view' person.id %}?view=siblings" class="btn btn-outline-success">Siblings</a>
         <a href="{% url 'add_family_member' %}?relation=sibling&owner_id={{ owner.id }}" class="btn btn-outline-success">Add Sibling</a>
       {% else %}
         <a href="{% url 'add_family_member' %}?relation=sibling&owner_id={{ owner.id }}" class="btn btn-outline-success">Add Sibling</a>
       {% endif %}
     </div>
-    <div id="owner-info-container">
-      <img src="{% static 'images/default-image.png' %}" alt="you" class="profile-image"/>
-      <div id="owner-info">
+    <div id="person-info-container">
+      {% if 'placeholder' in person.featured_image.url %}
+        <img class="card-img-top profile-image" src="{% static 'images/default-image.png' %}" alt="placeholder image" />
+      {% else %}
+        <img class="card-img-top profile-image" src=" {{ person.featured_image.url }}" alt="{{ person.first_name }}" />
+      {% endif %}
+      <div id="person-info">
         <p>
-          Name: <span id="first-name">{{ owner.first_name }}</span> <span id="last-name">{{ owner.last_name }}</span>
+          Name: <span id="first-name">{{ person.first_name }}</span> <span id="last-name">{{ person.last_name }}</span>
         </p>
         <p>
-          Birthday: <span id="birthday">{{ owner.birthday }}</span>
+          Birthday: <span id="birthday">{{ person.birthday }}</span>
         </p>
-        <a href="{% url 'edit_person' child.id %}" class="btn btn-outline-primary">Edit Person</a>
+        <a href="{% url 'edit_person' person.id %}" class="btn btn-outline-primary">Edit Person</a>
       </div>
     </div>
     <div id="spouse-container">
-      {% if owner.partner %}
-      <a href="{% url 'family_view' owner.id %}?view=partner" class="btn btn-outline-success">Partner</a>
+      {% if person.partner %}
+        <a href="{% url 'family_view' person.id %}?view=partner" class="btn btn-outline-success">Partner</a>
       {% else %}
-      <a href="{% url 'add_family_member' %}?relation=partner&owner_id={{ owner.id }}" class="btn btn-outline-success">Add Partner</a>
+        <a href="{% url 'add_family_member' %}?relation=partner&owner_id={{ owner.id }}" class="btn btn-outline-success">Add Partner</a>
       {% endif %}
     </div>
   </div>
   <div id="children-container">
     {% if children %}
-        {% for child in children %}
-        <div id="owner-info-container">
-            {% if "placeholder" in person.featured_image.url %}
-        <img class="card-img-top profile-image" src="{% static 'images/default-image.png' %}"
-           alt="placeholder image">
-        {% else %}
-        <img class="card-img-top profile-image" src=" {{ person.featured_image.url }}" alt="{{ person.first_name }}">
-        {% endif %}
-            <div id="owner-info">
+      {% for child in children %}
+        <div id="person-info-container">
+          {% if 'placeholder' in person.featured_image.url %}
+            <img class="card-img-top profile-image" src="{% static 'images/default-image.png' %}" alt="placeholder image" />
+          {% else %}
+            <img class="card-img-top profile-image" src=" {{ child.featured_image.url }}" alt="{{ person.first_name }}" />
+          {% endif %}
+          <div id="person-info">
             <p>
-                Name: <span id="first-name">{{ child.first_name }}</span> <span id="last-name">{{ child.last_name }}</span>
+              Name: <span id="first-name">{{ child.first_name }}</span> <span id="last-name">{{ child.last_name }}</span>
             </p>
             <p>
-                Birthday: <span id="birthday">{{ child.birthday }}</span>
+              Birthday: <span id="birthday">{{ child.birthday }}</span>
             </p>
             <a href="{% url 'edit_person' child.id %}" class="btn btn-outline-primary">Edit Person</a>
-            </div>
+          </div>
         </div>
-        {% endfor %}
+      {% endfor %}
     {% endif %}
   </div>
 {% endblock %}
