Debugging Process. Fixing Links/URLS and Views

--- a/familytree/templates/familytree/_person_card.html
+++ b/familytree/templates/familytree/_person_card.html
@@ -12,4 +12,5 @@
       <p>Birthday: {{ person.birth_date }}</p>
     </div>
   </a>
+  <a href="{% url 'edit_person' person.id %}" class="btn btn-outline-primary">Edit Person</a>
 </div>
